# Bedrock-coder

./: .gitignore  README.md  install.bat  install.ps1  install.sh  pyproject.toml
src/bedrock_code/: __init__.py  __main__.py  cli.py  setup_wizard.py
src/bedrock_code/commands/: slash.py
src/bedrock_code/core/: agent.py  config.py  context.py  memory.py  permissions.py  router.py
src/bedrock_code/mcp/: client.py  duckduckgo.py  manager.py  spawner.py
src/bedrock_code/models/: bedrock.py  registry.py  schemas.py
src/bedrock_code/tools/: editor.py  filesystem.py  git_tools.py  registry.py  shell.py  task_tracker.py  web_search.py
src/bedrock_code/tui/: completer.py  keybindings.py  renderer.py  repl.py  theme.py  widgets.py
src/bedrock_code/utils/: cost.py  diff.py  file_utils.py
tests/: conftest.py
tests/unit/: test_tools.py
