[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-code"
version = "0.1.0"
description = "A Claude Code-like CLI powered by AWS Bedrock"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cli", "ai", "bedrock", "aws", "coding-assistant"]
dependencies = [
    "boto3[crt]>=1.35",
    "botocore[crt]>=1.35",
    "typer[all]>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "mcp>=1.0",
    "pydantic>=2.6",
    "tomli-w>=1.0",
    "gitpython>=3.1",
    "anyio>=4.4",
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
    "difflib2>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
sso = [
    "awscli>=1.32",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "moto[bedrock]>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bc = "bedrock_code.cli:app"
bedrock-code = "bedrock_code.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_code"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["bedrock: requires real AWS Bedrock credentials"]
